{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 90,
  "lineage": "4a2ccefb-930d-f07e-5c97-3d3a50362652",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nandu-instance-pub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0657605d763ac72a8",
            "arn": "arn:aws:ec2:us-west-1:381492291062:instance/i-050e8e033218fe4e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050e8e033218fe4e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02415ac646be95213",
            "private_dns": "ip-10-0-0-92.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.92",
            "public_ip": "54.193.57.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00c1f88d4519828fb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0fabd0ca21f96befe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012e972adc69bdaf9",
            "tags": {
              "Env": "Dev",
              "Name": "nandu-web1"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "nandu-web1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fabd0ca21f96befe"
            ]
          },
          "dependencies": [
            "aws_security_group.nandu-pubSub-sg",
            "aws_subnet.nandu-pub-subnet-1",
            "aws_vpc.nandu-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0657605d763ac72a8",
            "arn": "arn:aws:ec2:us-west-1:381492291062:instance/i-08756a4f80f438622",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08756a4f80f438622",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu_pem",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-030b91651d4cfa576",
            "private_dns": "ip-10-0-0-47.us-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.47",
            "public_ip": "13.52.79.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08968b18e4972b3dc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0fabd0ca21f96befe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-012e972adc69bdaf9",
            "tags": {
              "Env": "Dev",
              "Name": "nandu-web2"
            },
            "tags_all": {
              "Env": "Dev",
              "Name": "nandu-web2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fabd0ca21f96befe"
            ]
          },
          "dependencies": [
            "aws_security_group.nandu-pubSub-sg",
            "aws_subnet.nandu-pub-subnet-1",
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nandu-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:internet-gateway/igw-03979fd254de2f02e",
            "id": "igw-03979fd254de2f02e",
            "owner_id": "381492291062",
            "tags": {
              "Name": "nandu-igw"
            },
            "tags_all": {
              "Name": "nandu-igw"
            },
            "vpc_id": "vpc-0ce38faf47f855823"
          },
          "dependencies": [
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nandu-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:route-table/rtb-06cf4b981b0cf98f9",
            "id": "rtb-06cf4b981b0cf98f9",
            "owner_id": "381492291062",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03979fd254de2f02e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nandu-route-table"
            },
            "tags_all": {
              "Name": "nandu-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce38faf47f855823"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nandu-igw",
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nandu-pubSub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:security-group/sg-0fabd0ca21f96befe",
            "description": "allow inbound traffic on port 22 and 443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fabd0ca21f96befe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "nandu-pubSub-sg",
            "name_prefix": "",
            "owner_id": "381492291062",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nandu-pubSub-sg"
            },
            "tags_all": {
              "Name": "nandu-pubSub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce38faf47f855823"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nandu-pvtSub-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:security-group/sg-0411fd9792ec5c8b1",
            "description": "allow inbound traffic on port 3306 and 22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0411fd9792ec5c8b1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "nandu-pvtSub-sg",
            "name_prefix": "",
            "owner_id": "381492291062",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nandu-pvtSub-sg"
            },
            "tags_all": {
              "Name": "nandu-pvtSub-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ce38faf47f855823"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nandu-pub-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:subnet/subnet-012e972adc69bdaf9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-012e972adc69bdaf9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492291062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nandu-pub-subnet-1"
            },
            "tags_all": {
              "Name": "nandu-pub-subnet-1"
            },
            "vpc_id": "vpc-0ce38faf47f855823"
          },
          "dependencies": [
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nandu-pvt-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:subnet/subnet-055115cff212664af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-055115cff212664af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492291062",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "nandu-pvt-subnet-1"
            },
            "tags_all": {
              "Name": "nandu-pvt-subnet-1"
            },
            "vpc_id": "vpc-0ce38faf47f855823"
          },
          "dependencies": [
            "aws_vpc.nandu-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nandu-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:381492291062:vpc/vpc-0ce38faf47f855823",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0c14a3b9120577268",
            "default_route_table_id": "rtb-0aaa80acbdab3fe61",
            "default_security_group_id": "sg-0227b75fd76236943",
            "dhcp_options_id": "dopt-0e2227f97cabe6b25",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ce38faf47f855823",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aaa80acbdab3fe61",
            "owner_id": "381492291062",
            "tags": {
              "Name": "nandu-vpc"
            },
            "tags_all": {
              "Name": "nandu-vpc"
            }
          }
        }
      ]
    }
  ]
}